Creating the filter search bar.

--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -27,11 +27,16 @@
         <h1 class="container__title">My birds</h1>
     
     <section class="filter">
-        <h2 class="filter__title">Filter</h2>
-        <button class="filter__btn">Date</button>
+        <h2 class="filter__title">Filter by</h2>
+        <button class="filter__btn">Newest</button>
+        <button class="filter__btn">Oldest</button>
         <button class="filter__btn">Bird</button>
         <button class="filter__btn">Place</button>
     </section>
+    <div class="filter-search">
+        <input type="search" class="filter-search-field">
+        <button class="filter-search-btn">Search</button>
+    </div>
     <section class="birds-list" id="birds-list"></section>
     </main>
 
