--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -28,14 +28,14 @@
     
     <section class="filter">
         <h2 class="filter__title">Filter by</h2>
-        <button class="filter__btn">Newest</button>
-        <button class="filter__btn">Oldest</button>
-        <button class="filter__btn">Bird</button>
-        <button class="filter__btn">Place</button>
+        <button class="filter__btn" id="filter-newest" onclick="filter(id)">Newest</button>
+        <button class="filter__btn" id="filter-oldest" onclick="filter(id)">Oldest</button>
+        <button class="filter__btn" id="filter-bird" onclick="filter(id)">Bird</button>
+        <button class="filter__btn" id="filter-place"onclick="filter(id)">Place</button>
     </section>
-    <div class="filter-search">
-        <input type="search" class="filter-search-field">
-        <button class="filter-search-btn">Search</button>
+    <div class="filter-search" id="search">
+        <input type="search" class="filter-search-field" id="search-field">
+        <button class="filter-search-btn" id="search-btn">Search</button>
     </div>
     <section class="birds-list" id="birds-list"></section>
     </main>
@@ -56,6 +56,7 @@
     <script src="../scripts/auth-guard.js"></script>
     <script src="../scripts/loading.js"></script>
     <script src="../scripts/my-birds.js"></script>
+    <script src="../scripts/filter-birds.js"></script>
     
 
 </body>
