Improving the search filter

--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -30,8 +30,7 @@
         <h2 class="filter__title">Filter by</h2>
         <button class="filter__btn" id="filter-newest" onclick="filter(id)">Newest</button>
         <button class="filter__btn" id="filter-oldest" onclick="filter(id)">Oldest</button>
-        <button class="filter__btn" id="filter-bird" onclick="filter(id)">Bird</button>
-        <button class="filter__btn" id="filter-place"onclick="filter(id)">Place</button>
+        <button class="filter__btn" id="filter-bird" onclick="filter(id)">Search</button>
     </section>
     <div class="filter-search" id="search">
         <input type="search" class="filter-search-field" id="search-field">
