Adding 'clicked' class and improving the search.

--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -27,13 +27,12 @@
         <h1 class="container__title">My birds</h1>
     
     <section class="filter">
-        <h2 class="filter__title">Filter by</h2>
-        <button class="filter__btn" id="filter-newest" onclick="filter(id)">Newest</button>
+        <button class="filter__btn" id="show-all" onclick="filter(id)">All</button>
         <button class="filter__btn" id="filter-oldest" onclick="filter(id)">Oldest</button>
-        <button class="filter__btn" id="filter-bird" onclick="filter(id)">Search</button>
+        <button class="filter__btn" id="search-btn-filter" onclick="filter(id)">Search</button>
     </section>
     <div class="filter-search" id="search">
-        <input type="search" class="filter-search-field" id="search-field">
+        <input type="search" class="filter-search-field" id="search-field" onchange="isSearchEmpty()">
         <button class="filter-search-btn" id="search-btn">Search</button>
     </div>
     <section class="birds-list" id="birds-list"></section>
