--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <input class="form__field" type="password" required id="password" onchange="validateLoginForm()">
             <span class="error" id="obrigatory-password-error">Password is obrigatory</span>
             <span class="error" id="invalid-password-error">Min 6 characteres.</span>
-            <button class="btn-clear" onclick="window.location.href = './pages/recover-password.html'">I forgot my password</button>
+            <button class="btn-clear" id="go-to-recover-btn">I forgot my password</button>
             <button class="btn-solid" id="login-btn" disabled>Login</button>
-            <button class="btn-clear" onclick="window.location.href='./pages/create-an-account.html'" >Create an account</button>
+            <button class="btn-clear" id="go-to-create-account-btn" >Create an account</button>
         </form>
     </section>
     
@@ -47,7 +47,6 @@
 
 <script src="./scripts/login.js"></script>
 <script src="./scripts/formValidation.js"></script>
-<script src="./scripts/recoverPassword.js"></script>
 <script src="./scripts/loading.js"></script>
 
 </html>
