--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -12,14 +12,16 @@
             <div class="logo">
                 <img class="logo__img" src="/img/image 1.svg">
                 <h2 class="logo_name">Bird Diary</h2>
-        </div>
+            </div>
+            
             <nav class="header__menu">
-                <ul class="menu__list">
+                <ul class="menu__list" id="list-menu">
                     <li class="menu__item"><a class="menu__link" href="./my-birds.html">My birds</a></li>
                     <li class="menu__item"><a class="menu__link" href="./new-diary.html">New diary</a></li>
                     <li class="menu__item"><a class="menu__link" href="./about-us.html">About us</a></li>
                     <li class="menu__item"><a class="menu__link" onclick="logoutUser()">Log out</a></li>
             </nav>
+            <img class="header__menu-hamb" src="../img/Hamburger_icon.svg.png" id="hamb-menu-icon">
         </header>
 
         <main class="container">
