--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -56,6 +56,7 @@
     <script src="../scripts/loading.js"></script>
     <script src="../scripts/my-birds.js"></script>
     <script src="../scripts/filter-birds.js"></script>
+    <script src="../scripts/mobile-global.js"></script>
     
 
 </body>
