Fixing path to recover-password`s page.

--- a/pages/create-an-account.html
+++ b/pages/create-an-account.html
@@ -33,7 +33,7 @@
             <input class="form__field" type="password" required id="confirm-password" onchange="validateNewUserForm()">
             
             <span class="error" id="passwords-dont-match-error">The passwords don't match.</span>
-            <button class="btn-clear" onclick="window.location.href = './pages/recover-password.html'">I forgot my password</button>
+            <button class="btn-clear" onclick="window.location.href = './recover-password.html'">I forgot my password</button>
             <button class="create-account-btn btn-solid" id="create-account-btn"disabled onclick="createNewUser(event)">Create my account</button>
             <button class="btn-clear" onclick="window.location.href='../index.html'">Back to login</button>
         </form>
