Refactoring the code of filter.

--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -33,9 +33,9 @@
             <button class="filter__btn" id="filter-oldest" >Oldest</button>
             <button class="filter__btn" id="search-btn-filter" >Search</button>
         </section>
-        <div class="filter-search" id="search">
+        <div class="filter-search" id="search-bar">
             <input type="search" class="filter-search-field" id="search-field">
-            <button class="filter-search-btn" id="search-btn">Search</button>
+            <button class="filter-search-btn" id="search-result-btn">Search</button>
         </div>
         <section class="birds-list" id="birds-list"></section>
         </main>
