--- a/pages/new-diary.html
+++ b/pages/new-diary.html
@@ -54,7 +54,10 @@
 
     
     <footer>
-        <p>Contact us</p>
+        <p>Powered by George Alves de Araujo and Heloise Milena Dambrat.</p>
+        <p>Copyright&#169 2023 George Alves de Araujo.</p>
+        <p>All rights reserved.</p>
+        <p>Contact: bird.diary2023@gmail.com</p>
     </footer>
 <!--Início dos scripts do firebase-->
     <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app-compat.js"></script>
