Writing about us content.

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -39,7 +39,8 @@
             </div>
 
             <div class="about-content__text">
-                <p>Lorem ipsumLorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsumLorem ipsum Lorem ipsum Lorem ipsum</p>
+                <p>Bird Diary is a website for bird watchers idealized by George Alves de Araujo, programmer and bird watcher. The main purpose is providing a quick and easy tool for recording the birds that were seen in a specific day and place. In general, it is a field journal. Also, Bird Diary has the potential to map species, since it stores data of coordinates from the added diaries. We expect it helps to making bird watching more popular and approachable for people. I hope you enjoy!</p>
+                <p>If you notice some problem, send us an email: bird.diary2023@gmail.com</p>
             </div>
         </section>
     </main>
