Writing main quote.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="banner">
-        <h1 class="banner__title">Beautiful quote</h1>
+        <h1 class="banner__title">Birding your day!</h1>
         <img class="banner__img" src="./img/image 5.svg">
     </section>
 
