Reviewing the language (english)

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <label>Email</label>
             <input class="form__field" type="email" placeholder="your@email.com" required id="email" onchange="validateLoginForm()">
             <span class="error" id="invalid-email-error">Invalid email</span>
-            <span class="error" id="obrigatory-email-error">Email is obrigatory</span>
+            <span class="error" id="obligatory-email-error">Email is required.</span>
             <label>Password</label>
             <input class="form__field" type="password" required id="password" onchange="validateLoginForm()">
-            <span class="error" id="obrigatory-password-error">Password is obrigatory</span>
+            <span class="error" id="obligatory-password-error">Password is required</span>
             <span class="error" id="invalid-password-error">Min 6 characteres.</span>
             <button class="btn-clear" id="go-to-recover-btn">I forgot my password</button>
             <button class="btn-solid" id="login-btn" disabled>Login</button>
