--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -25,6 +25,7 @@
                 <li class="menu__item"><a class="menu__link" href="./new-diary.html">New diary</a></li>
                 <li class="menu__item"><a class="menu__link" href="./about-us.html">About us</a></li>
                 <li class="menu__item"><a class="menu__link" onclick="logoutUser()">Log out</a></li>
+            </ul>
         </nav>
         <img class="header__menu-hamb" src="../img/Hamburger_icon.svg.png" id="hamb-menu-icon">
     </header>
@@ -46,7 +47,7 @@
     </main>
 
     <footer>
-        <p>Powered by George Alves de Araujo and Heloise Milena Dambrat.</p>
+        <p>Developed by George Alves de Araujo and Heloise Milena Dambrat.</p>
         <p>Copyright&#169 2023 George Alves de Araujo.</p>
         <p>All rights reserved.</p>
         <p>Contact: bird.diary2023@gmail.com</p>
