--- a/pages/create-an-account.html
+++ b/pages/create-an-account.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section class="banner">
-        <h1 class="banner__title">Beautiful quote</h1>
+        <h1 class="banner__title">Birding your day!</h1>
         <img class="banner__img" src="../img/image 5.svg">
     </section>
 
@@ -24,10 +24,10 @@
             <label>Email</label>
             <input class="form__field" type="email" placeholder="your@email.com" required id="new-email" onchange="validateNewUserForm()">
             <span class="error" id="new-account-invalid-email-error">Invalid email</span>
-            <span class="error" id="new-account-required-email-error">Email is obrigatory</span>
+            <span class="error" id="new-account-required-email-error">Email is required.</span>
             <label>Password</label>
             <input class="form__field" type="password" required id="new-password" onchange="validateNewUserForm()">
-            <span class="error" id="new-account-required-password-error">Password is obrigatory</span>
+            <span class="error" id="new-account-required-password-error">Password is required.</span>
             <span class="error" id="new-account-invalid-password-error">Min 6 characteres.</span>
             <label>Confirm password</label>
             <input class="form__field" type="password" required id="confirm-password" onchange="validateNewUserForm()">
