--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -40,7 +40,7 @@
         <section class="birds-list" id="birds-list"></section>
         </main>
     <footer>
-        <p>Powered by George Alves de Araujo and Heloise Milena Dambrat.</p>
+        <p>Developed by George Alves de Araujo and Heloise Milena Dambrat.</p>
         <p>Copyright&#169 2023 George Alves de Araujo.</p>
         <p>All rights reserved.</p>
         <p>Contact: bird.diary2023@gmail.com</p>
