--- a/pages/recover-password.html
+++ b/pages/recover-password.html
@@ -22,7 +22,7 @@
             <label>Reset password email: </label>
             <input class="form__field" type="email" placeholder="your@email.com" required id="recovery-email" onchange="validateRecoverForm()">
             <span class="error" id="invalid-recovery-email-error">Invalid email</span>
-            <span class="error" id="obrigatory-recovery-email-error">Email is obrigatory</span>
+            <span class="error" id="obligatory-recovery-email-error">Email is required</span>
             <button class="btn-solid" id="recovery-password-btn" disabled>Send</button>
             <button class="btn-clear" onclick="window.location.href='./create-an-account.html'" >Create an account</button>
             <button class="btn-clear" onclick="window.location.href = '../index.html'">Back to login</button>
