--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="banner">
         <h1 class="banner__title">Birding your day!</h1>
-        <img class="banner__img" src="./img/image 5.svg">
+        <img alt="imagem de coruja" class="banner__img" src="./img/image 5.svg">
     </section>
 
     <section class="login">
