--- a/pages/my-birds.html
+++ b/pages/my-birds.html
@@ -10,7 +10,7 @@
 <body>
         <header class="header">
             <div class="logo">
-                <img class="logo__img" src="/img/image 1.svg">
+                <img alt="logo" class="logo__img" src="/img/image 1.svg">
                 <h2 class="logo_name">Bird Diary</h2>
             </div>
             
