--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img class="logo__img" src="/img/image 1.svg">
+            <img alt="logo" class="logo__img" src="/img/image 1.svg">
             <h2 class="logo_name">Bird Diary</h2>
     </div>
         <nav class="header__menu">
@@ -35,7 +35,7 @@
 
         <section class="about-content">
             <div class="about-content__logo">
-                <img class="about-content__img" src="../img/image 5.svg">
+                <img alt="imagem de coruja" class="about-content__img" src="../img/image 5.svg">
                 <h2 class="about-content__title">Bird Diary</h2>
             </div>
 
